@@ -6,6 +6,7 @@ Distributed under the GPL v3 or later
 
 - Full series download on Swedish language arenan.yle.fi fixed
 - Downloading news clips from yle.fi (in addition to yle.fi/uutiset/)
+- Episodes were sometimes sorted incorrectly
 
 Version 20221111
 
